Committed for implemented UT and Bug Fix
